<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExamFragment">

    <ListView
        android:id="@+id/examListView"
        android:layout_width="374dp"
        android:layout_height="346dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="378dp"
        android:layout_height="86dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/exams"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextExamName"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:hint="@string/exam_name_text"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextExamDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextExamDate"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:hint="@string/exam_date_Text"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextExamLocation"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextExamTime"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/exam_time_text"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextExamCourse"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextExamLocation"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:hint="@string/exam_location_text"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddExam"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextExamCourse"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/exam_course_text"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddExam"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAddExam"
        android:layout_width="371dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:text="@string/exam_add_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>