<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ToDoFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/to_do_list"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="417dp"
        android:layout_height="392dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortSpinner" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/courseEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/editText"
            android:layout_width="308dp"
            android:layout_height="53dp"
            android:hint="@string/todo_enter_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/todo_add_button"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/todo_date_text"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/courseEditText"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/todo_course_text"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:entries="@array/sort_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>